--- a/core/templates/contato.html
+++ b/core/templates/contato.html
@@ -1,10 +1,24 @@
+{% load bootstrap4 %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <title>contato</title>
+  {% bootstrap_css %}
 </head>
 <body>
+  <div class="container">
     <h1>contato</h1>
+    {% bootstrap_messages %}
+
+    <form action="{% url 'contato' %}"method="post" class="form" autocomplete="off">
+      {% csrf_token %}
+      {% bootstrap_form form %}
+      {% buttons %}
+        <button type="submit" class="btn btn-primary">enviar mensagem</button>
+      {% endbuttons %}
+    </form>
+  </div>
+{% bootstrap_javascript jquery='full' %}
 </body>
 </html>
